@@ -1,16 +1,33 @@
 package com.petstore.backend.controller;
 
+import java.util.List;
+import java.util.Optional;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
 import com.petstore.backend.dto.CategoryDTO;
 import com.petstore.backend.entity.Category;
 import com.petstore.backend.service.CategoryService;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
 
 /**
  * Controlador REST para gestión de categorías
@@ -23,23 +40,43 @@ import java.util.stream.Collectors;
  */
 @RestController
 @RequestMapping("/api/categories")
-@CrossOrigin(origins = "*")
+@CrossOrigin(origins = {"http://localhost:3000", "http://localhost:8080", "https://petstore-feature5-backend.onrender.com", "https://fluffy-deals-hub.vercel.app"})
+@Tag(name = "Categorías", description = "API para gestión de categorías de productos")
 public class CategoryController {
 
-    @Autowired
-    private CategoryService categoryService;
+    
+    private final CategoryService categoryService; // Inyección de dependencia del servicio de categorías
 
-    /**
-     * GET /api/categories
-     * Obtiene todas las categorías disponibles
-     */
+    public CategoryController(CategoryService categoryService) {
+        this.categoryService = categoryService;
+    }
+
+    @Operation(
+            summary = "Obtener todas las categorías",
+            description = "Retorna una lista completa de todas las categorías de productos disponibles"
+    )
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "200", 
+                    description = "Lista de categorías obtenida exitosamente",
+                    content = @Content(
+                            mediaType = "application/json",
+                            array = @ArraySchema(schema = @Schema(implementation = CategoryDTO.class))
+                    )
+            ),
+            @ApiResponse(
+                    responseCode = "500", 
+                    description = "Error interno del servidor",
+                    content = @Content
+            )
+    })
     @GetMapping
     public ResponseEntity<List<CategoryDTO>> getAllCategories() {
         try {
             List<Category> categories = categoryService.findAll();
             List<CategoryDTO> categoryDTOs = categories.stream()
                     .map(this::convertToDTO)
-                    .collect(Collectors.toList());
+                    .toList();
             
             return ResponseEntity.ok(categoryDTOs);
         } catch (Exception e) {
@@ -47,12 +84,34 @@ public class CategoryController {
         }
     }
 
-    /**
-     * GET /api/categories/{id}
-     * Obtiene una categoría específica por ID
-     */
+    @Operation(
+            summary = "Obtener categoría por ID",
+            description = "Retorna una categoría específica utilizando su identificador único"
+    )
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "200", 
+                    description = "Categoría encontrada exitosamente",
+                    content = @Content(
+                            mediaType = "application/json",
+                            schema = @Schema(implementation = CategoryDTO.class)
+                    )
+            ),
+            @ApiResponse(
+                    responseCode = "404", 
+                    description = "Categoría no encontrada",
+                    content = @Content
+            ),
+            @ApiResponse(
+                    responseCode = "500", 
+                    description = "Error interno del servidor",
+                    content = @Content
+            )
+    })
     @GetMapping("/{id}")
-    public ResponseEntity<CategoryDTO> getCategoryById(@PathVariable Integer id) {
+    public ResponseEntity<CategoryDTO> getCategoryById(
+            @Parameter(description = "ID de la categoría", example = "1", required = true)
+            @PathVariable Integer id) {
         try {
             Optional<Category> categoryOpt = categoryService.findById(id);
             
@@ -67,12 +126,35 @@ public class CategoryController {
         }
     }
 
-    /**
-     * POST /api/categories
-     * Crea una nueva categoría
-     */
+    @Operation(
+            summary = "Crear nueva categoría",
+            description = "Crea una nueva categoría de productos en el sistema"
+    )
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "201", 
+                    description = "Categoría creada exitosamente",
+                    content = @Content(
+                            mediaType = "application/json",
+                            schema = @Schema(implementation = CategoryDTO.class)
+                    )
+            ),
+            @ApiResponse(
+                    responseCode = "400", 
+                    description = "Datos de entrada inválidos",
+                    content = @Content
+            ),
+            @ApiResponse(
+                    responseCode = "500", 
+                    description = "Error interno del servidor",
+                    content = @Content
+            )
+    })
+    @SecurityRequirement(name = "bearerAuth")
     @PostMapping
-    public ResponseEntity<CategoryDTO> createCategory(@RequestBody CategoryDTO categoryDTO) {
+    public ResponseEntity<CategoryDTO> createCategory(
+            @Parameter(description = "Datos de la categoría a crear", required = true)
+            @RequestBody CategoryDTO categoryDTO) {
         try {
             Category category = convertToEntity(categoryDTO);
             
@@ -85,12 +167,42 @@ public class CategoryController {
         }
     }
 
-    /**
-     * PUT /api/categories/{id}
-     * Actualiza una categoría existente
-     */
+    @Operation(
+            summary = "Actualizar categoría existente",
+            description = "Actualiza los datos de una categoría existente utilizando su ID"
+    )
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "200", 
+                    description = "Categoría actualizada exitosamente",
+                    content = @Content(
+                            mediaType = "application/json",
+                            schema = @Schema(implementation = CategoryDTO.class)
+                    )
+            ),
+            @ApiResponse(
+                    responseCode = "404", 
+                    description = "Categoría no encontrada",
+                    content = @Content
+            ),
+            @ApiResponse(
+                    responseCode = "400", 
+                    description = "Datos de entrada inválidos",
+                    content = @Content
+            ),
+            @ApiResponse(
+                    responseCode = "500", 
+                    description = "Error interno del servidor",
+                    content = @Content
+            )
+    })
+    @SecurityRequirement(name = "bearerAuth")
     @PutMapping("/{id}")
-    public ResponseEntity<CategoryDTO> updateCategory(@PathVariable Integer id, @RequestBody CategoryDTO categoryDTO) {
+    public ResponseEntity<CategoryDTO> updateCategory(
+            @Parameter(description = "ID de la categoría a actualizar", example = "1", required = true)
+            @PathVariable Integer id, 
+            @Parameter(description = "Nuevos datos de la categoría", required = true)
+            @RequestBody CategoryDTO categoryDTO) {
         try {
             Optional<Category> existingCategoryOpt = categoryService.findById(id);
             
@@ -113,12 +225,32 @@ public class CategoryController {
         }
     }
 
-    /**
-     * DELETE /api/categories/{id}
-     * Elimina una categoría por ID
-     */
+    @Operation(
+            summary = "Eliminar categoría",
+            description = "Elimina permanentemente una categoría del sistema utilizando su ID"
+    )
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "204", 
+                    description = "Categoría eliminada exitosamente",
+                    content = @Content
+            ),
+            @ApiResponse(
+                    responseCode = "404", 
+                    description = "Categoría no encontrada",
+                    content = @Content
+            ),
+            @ApiResponse(
+                    responseCode = "500", 
+                    description = "Error interno del servidor",
+                    content = @Content
+            )
+    })
+    @SecurityRequirement(name = "bearerAuth")
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteCategory(@PathVariable Integer id) {
+    public ResponseEntity<Void> deleteCategory(
+            @Parameter(description = "ID de la categoría a eliminar", example = "1", required = true)
+            @PathVariable Integer id) {
         try {
             if (categoryService.existsById(id)) {
                 categoryService.deleteById(id);
@@ -131,20 +263,29 @@ public class CategoryController {
         }
     }
 
-    /**
-     * GET /api/categories/info
-     * Información sobre los endpoints disponibles
-     */
+    @Operation(
+            summary = "Información de la API de categorías",
+            description = "Retorna información sobre todos los endpoints disponibles en la API de categorías"
+    )
+    @ApiResponses(value = {
+            @ApiResponse(
+                    responseCode = "200", 
+                    description = "Información obtenida exitosamente",
+                    content = @Content(mediaType = "application/json")
+            )
+    })
     @GetMapping("/info")
-    public ResponseEntity<String> getEndpointsInfo() {
-        String info = """
-                Endpoints disponibles para Categories:
-                - GET /api/categories - Todas las categorías
-                - GET /api/categories/{id} - Categoría por ID
-                - POST /api/categories - Crear categoría
-                - PUT /api/categories/{id} - Actualizar categoría
-                - DELETE /api/categories/{id} - Eliminar categoría
-                """;
+    public ResponseEntity<Object> getEndpointsInfo() {
+        var info = java.util.Map.of(
+            "service", "Categories API",
+            "endpoints", java.util.List.of(
+                "GET /api/categories - Todas las categorías",
+                "GET /api/categories/{id} - Categoría por ID",
+                "POST /api/categories - Crear categoría",
+                "PUT /api/categories/{id} - Actualizar categoría",
+                "DELETE /api/categories/{id} - Eliminar categoría"
+            )
+        );
         return ResponseEntity.ok(info);
     }
 
